crates/ferrum-interfaces/tests/ui/vnext/fail/resource_pool_event_is_not_deserialize.rs
use ferrum_interfaces::vnext::ResourcePoolEvent;

fn decode(bytes: &[u8]) {
    let _: ResourcePoolEvent = serde_json::from_slice(bytes).unwrap();
}

fn main() {}
